# ChangeLog for app-arch/lzip
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.38 2013/08/14 05:01:05 radhermit Exp $

  14 Aug 2013; Tim Harder <radhermit@gentoo.org> -lzip-1.12.ebuild,
  -lzip-1.13.ebuild, -files/lzip-1.9-build.patch, -files/lzip-1.13-flags.patch:
  Remove old.

  14 Aug 2013; Tim Harder <radhermit@gentoo.org> lzip-1.14.ebuild:
  Add ~arm keyword.

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for alpha, wrt bug #470296

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for sparc, wrt bug #470296

  24 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for ppc64, wrt bug #470296

  21 May 2013; Jeroen Roovers <jer@gentoo.org> lzip-1.14.ebuild:
  Stable for HPPA (bug #470296).

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for ppc, wrt bug #470296

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for x86, wrt bug #470296

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> lzip-1.14.ebuild:
  Stable for amd64, wrt bug #470296

*lzip-1.14 (07 Mar 2013)

  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +lzip-1.14.ebuild:
  Version bump.

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> lzip-1.13.ebuild:
  alpha/sparc stable wrt #418507

  07 Jun 2012; Brent Baude <ranger@gentoo.org> lzip-1.13.ebuild:
  Marking lzip-1.13 ppc for bug 418507

  06 Jun 2012; Jeff Horelick <jdhore@gentoo.org> lzip-1.13.ebuild:
  marked x86 per bug 418507

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> lzip-1.13.ebuild:
  Stable for HPPA (bug #418507).

  05 Jun 2012; Brent Baude <ranger@gentoo.org> lzip-1.13.ebuild:
  Marking lzip-1.13 ppc64 for bug 418507

  03 Jun 2012; Agostino Sarubbo <ago@gentoo.org> lzip-1.13.ebuild:
  Stable for amd64, wrt bug #418507

*lzip-1.13 (19 Mar 2012)

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> +lzip-1.13.ebuild,