@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST lzip-1.14.tar.gz 80699 SHA256 7ff5cc521560edb2a0a6cdf258cf3afdaeb1dbcc354d96d011d0dd7ec584cbe7 SHA512 85eefecf67cc451e5417faf9fe5d54e0847ec633ae852ef60f0913d197b8ffa8e80359124b0a56ac11ed5687ceee3e111019a7fb3c62da662e1bcc3575359c88 WHIRLPOOL ae374c5fe53487619218b2f5c71701bec8266feb09226fd24681d672b3cee19621da2024207c9f68153c51dc23651a4ac32485abdf378fb04044c8484804d9a3
+DIST lzip-1.15.tar.gz 97409 SHA256 7cd3fcda68fc9900efcf7784313e3bdd1303fef1a0546db9723f5e5564dd05b6 SHA512 e0697f9d72a69fb688cdd3229a26a12f640b665be3cbdc189f554739143cb23b1c302eac3733d36c02ea6d38744291c4f72b4c4ed8b942021536a4a7788a387d WHIRLPOOL 52e765becf3fc4157c157c9e74e1f8502590bbfaefc63aabcc2f01d8795822518b0f04c088663c50be47050fd66f3344fee5b71743bfda881d15071736bca484
 EBUILD lzip-1.14.ebuild 722 SHA256 57f0ba0f7492c07e34163618cb4092b4276c481ca93d154dc68b43ce405b5706 SHA512 6d4965f24847af27a4189bf53e63da3b24aa48393a7231a033174058f846e4c3196b8a2cf912bd574f0794ce820b52745ea865f23539e629f6c3f2a38e78e929 WHIRLPOOL 97b4264cbc341221b08f788bdc7e1141845e438528dc4bbdf2b771e9a83207553e47b6c3a765252d5a9cd4b6bd4b3ac9ee1c31045a5c5626e13b8cca07df834a
-MISC ChangeLog 4388 SHA256 2f25ab31d8567f563469fe7cd445425c39a23458427ddfe32dd297d6ec6da3d8 SHA512 1e88de94285fc885d9e59656a6489a449fa6d787180adb315f024833bb5c49405016c655745b2fe9ba17b84b16ff404f56ed76e7fde7091d0d08cfbad82a2fb2 WHIRLPOOL 80fa07dcecce9c401af98257a217ad7825516d336d3b04583ec575824e78bb7c2319e476ca44956da2f523e8a34c8c33f7d176d1609dba8864200646380e0148
+EBUILD lzip-1.15.ebuild 729 SHA256 98c676597f9e3a5d486300f5587569a3f8b301f49a1bb64abeaf1c3ca2407c1b SHA512 132780047fd1ea7654a9d6b45144daffac34718c40a9d18355187a901a1ad69f9bf5523bdebeeec3f31de2dc16730517dea7a9faab3ea5e57c7118b43fc6821b WHIRLPOOL 09ea575a2825573fa3f8e602cc19f3c2951ecc13a7448dfafd25b2be4cf5c8b1fe274b01ba83f758ac3d030a6aff1bb3e2128a3ed549066ecfcdd02693ba29ac
+MISC ChangeLog 4499 SHA256 db2b611ab2bcd417048cd366032da84b9db384fbcbd5cf1d8447aa0dd4d14b22 SHA512 eea8ab6913b8b9590334fc588e5430ef128a7374061e8a23db64eee8061cb8c256879de65e48f9638894d13f09e652dc809881a90f24dca8a9f2d87bfef696b0 WHIRLPOOL db00174924eccc65535a3c77f8f8c959360d1c12f8757f61c987728094214986f17d5e19fef02a3182e09e25aa98dbd6d7fd106c5da1ac1d78e4512d2dc7b948
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSCw8TAAoJEEqz6FtPBkyj6MQH/2eIWbAOKdRXtl6DWH9Rm7NQ
-f+ceLNLqRf1LjlskuzM8B4VAoYCzpI8oZuxTUj7uK/ZYIqWDjaTp6+s+/3J4s/uH
-jMilATGfz/f/ZN/3m5wdXbV1GnxMO54EnzOvY+n5aQqLPGtISI6yD9dHFn3nTjlI
-fwYOzVXhuEYJgfXhltCz+FBwe4RrAmO97VIviZEt1pLQtVgRFqCl3s2regUqfwhg
-CS03nbjlSgxOcnjloLVxzkbQK7ugNUcexqLP0BNddQzQH2Csa6DZ17QEs3ss2/zZ
-wz7cJgIm5dIC1AT103QMUouVJJS8Cg0O6T+sGTwr4CswpqYC7maar6R65zKYnm0=
-=V59N
+iQEcBAEBCAAGBQJSTnBrAAoJEEqz6FtPBkyjX0kH/2/WWnfj07UnO10lwfMPbTXq
+ZGR1/mGWb6i/OU9rBJzM56GxQtpmlDg/I0K6Xb6epHugbj10wymy6xMmPBQ43bLK
+1UkJyuuxc8t0efW19yCATqcuM+uuhFAfytPmci6wAbsQy7nY4URPt1LpSla2ZnHR
+xvsk50hlQCpIae11ZiBLrfo1RuZgMSsw99rJht7D03oLY1DWR1t3uFhly1jUQPYt
+7ylW0zwfT08MCXA5PZPmrMKTglLKPO9lPDmXPBb8dIeHvi+nXhO6l9ZkgM9E5B7J
+vqJc+0H3thla0HsZmn2Rs7RZLVHOkJ2sYBghH4xwUcEMexWS3dR36U7m00kOXUM=
+=jHG6
 -----END PGP SIGNATURE-----
