@@ -1,0 +1,25 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/lzip-1.15.ebuild,v 1.1 2013/10/04 07:37:57 radhermit Exp $
+
+EAPI="4"
+
+inherit toolchain-funcs
+
+DESCRIPTION="lossless data compressor based on the LZMA algorithm"
+HOMEPAGE="http://www.nongnu.org/lzip/lzip.html"
+SRC_URI="http://download.savannah.gnu.org/releases-noredirect/${PN}/${P}.tar.gz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86"
+
+src_configure() {
+	# not autotools-based
+	./configure \
+		--prefix="${EPREFIX}"/usr \
+		CXX="$(tc-getCXX)" \
+		CPPFLAGS="${CPPFLAGS}" \
+		CXXFLAGS="${CXXFLAGS}" \
+		LDFLAGS="${LDFLAGS}" || die
+}
