@@ -1,0 +1,10 @@
+DEFINED_PHASES=configure
+DESCRIPTION=lossless data compressor based on the LZMA algorithm
+EAPI=4
+HOMEPAGE=http://www.nongnu.org/lzip/lzip.html
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-3
+SLOT=0
+SRC_URI=http://download.savannah.gnu.org/releases-noredirect/lzip/lzip-1.15.tar.gz
+_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c
+_md5_=825286df51ec0c022fdae168d85082e9
