@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/lzip
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.38 2013/08/14 05:01:05 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/lzip/ChangeLog,v 1.39 2013/10/04 07:37:57 radhermit Exp $
+
+*lzip-1.15 (04 Oct 2013)
+
+  04 Oct 2013; Tim Harder <radhermit@gentoo.org> +lzip-1.15.ebuild:
+  Version bump.
 
   14 Aug 2013; Tim Harder <radhermit@gentoo.org> -lzip-1.12.ebuild,
   -lzip-1.13.ebuild, -files/lzip-1.9-build.patch, -files/lzip-1.13-flags.patch:
